fixed feature image size and spacing

--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -63,7 +63,6 @@
 }
 
 .featured-project {
-  height: 30rem;
 }
 
 .testimonial-card,
@@ -81,21 +80,20 @@
 }
 
 .featured-project {
-  gap: 1rem;
-
   img {
     width: 90%;
-    height: 200vh;
+    height: 15rem;
+    border-radius: 5px;
   }
 
   button {
-    width: 85%;
+    width: 100%;
     height: 6rem;
-    margin-bottom: 0.125rem;
+    margin: 0.5rem 0 0 0;
     background: var(--card-bg-alt-2);
     color: var(--card-text-alt-2);
     border: none;
-    font-size: 1.5rem;
+    font-size: 2rem;
     display: grid;
     place-items: center;
     padding: 0;
